# better-auth-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  better-auth.yaml  cliff.toml  package.json  release-plz.toml  tarpaulin.toml
compat-tests/: README.md
crates/api/: Cargo.toml
crates/api/src/: cookie_utils.rs  lib.rs
crates/api/src/plugins/: account_management.rs  admin.rs  api_key.rs  cookie_utils.rs  email_password.rs  email_verification.rs  helpers.rs  mod.rs  passkey.rs  password_management.rs  password_utils.rs  session_management.rs  two_factor.rs  user_management.rs
crates/api/src/plugins/admin/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/api_key/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/email_verification/: handlers.rs  mod.rs  tests.rs  token.rs  types.rs
crates/api/src/plugins/oauth/: encryption.rs  handlers.rs  mod.rs  providers.rs  state.rs  types.rs
crates/api/src/plugins/organization/: config.rs  mod.rs  rbac.rs  types.rs
crates/api/src/plugins/organization/handlers/: invitation.rs  member.rs  mod.rs  org.rs
crates/api/src/plugins/passkey/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/password_management/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/src/plugins/user_management/: handlers.rs  mod.rs  tests.rs  types.rs
crates/api/tests/: account_oauth_tests.rs
crates/better-auth-api/: CHANGELOG.md  Cargo.toml
crates/better-auth-api/src/: error.rs  lib.rs
crates/better-auth-api/src/adapters/: cache.rs  mailer.rs  mod.rs
crates/better-auth-api/src/core/: auth.rs  config.rs  mod.rs  plugin.rs
crates/better-auth-api/src/handlers/: axum.rs
crates/better-auth-api/src/plugins/: account_management.rs  email_password.rs  email_verification.rs  mod.rs  oauth.rs  password_management.rs  session_management.rs  two_factor.rs
crates/better-auth-api/src/plugins/organization/: mod.rs  rbac.rs  types.rs
crates/better-auth-api/src/plugins/organization/handlers/: invitation.rs  member.rs  mod.rs  org.rs
crates/better-auth-api/tests/: phase1_tests.rs
crates/better-auth-core/: Cargo.toml
crates/better-auth-core/src/: config.rs  email.rs  error.rs  hooks.rs  lib.rs  openapi.rs  plugin.rs  session.rs  types.rs
crates/better-auth-core/src/adapters/: cache.rs  database.rs  mod.rs
crates/better-auth-core/src/middleware/: body_limit.rs  cors.rs  csrf.rs  mod.rs  rate_limit.rs
crates/better-auth-entity/: CHANGELOG.md  Cargo.toml
crates/better-auth-entity/src/: account.rs  invitation.rs  lib.rs  member.rs  organization.rs  session.rs  user.rs
crates/better-auth-migration/: Cargo.toml
crates/better-auth-migration/src/: lib.rs  m20240101_000000_create_core_tables.rs  m20240101_000001_create_organization_tables.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  email.rs  entity.rs  error.rs  extractors.rs  hooks.rs  lib.rs  logger.rs  openapi.rs  plugin.rs  schema.rs  session.rs  test_store.rs  types.rs  types_impls.rs  types_org.rs  types_plugin.rs  wire.rs
crates/core/src/adapters/: cache.rs  database.rs  memory.rs  memory_traits.rs  mod.rs  traits.rs
crates/core/src/adapters/sea_orm/: api_key_ops.rs
crates/core/src/middleware/: body_limit.rs  cors.rs  csrf.rs  mod.rs  rate_limit.rs
crates/core/src/store/: cache.rs  mod.rs
crates/core/src/store/sea_orm/: accounts.rs  api_keys.rs  conversions.rs  invitations.rs  members.rs  mod.rs  organizations.rs  passkeys.rs  sessions.rs  two_factor.rs  users.rs  verifications.rs
crates/core/src/store/sea_orm/entities/: account.rs  invitation.rs  mod.rs  passkey.rs  session.rs  two_factor.rs  user.rs  verification.rs
crates/core/src/utils/: cookie_utils.rs  email.rs  mod.rs  password.rs
crates/derive/: Cargo.toml
crates/derive/src/: auth_derive.rs  auth_schema.rs  from_row.rs  helpers.rs  lib.rs  memory_derive.rs  plugin_config.rs
crates/seaorm/: Cargo.toml
crates/seaorm-macros/: Cargo.toml
crates/seaorm-macros/src/: auth_entity.rs  lib.rs
crates/seaorm/src/: config.rs  conversions.rs  entity.rs  error.rs  hooks.rs  lib.rs  schema.rs  types.rs  types_org.rs
crates/seaorm/src/store/: accounts.rs  api_keys.rs  bundled_schema.rs  invitations.rs  members.rs  migrator.rs  mod.rs  organizations.rs  passkeys.rs  sessions.rs  two_factor.rs  users.rs  verifications.rs
crates/seaorm/src/store/entities/: account.rs  api_key.rs  member.rs  organization.rs  session.rs  user.rs  verification.rs
crates/seaorm/src/utils/: email.rs
docs/: better-auth.json  package.json  pnpm-lock.yaml
examples/: README.md  axum_server.rs  basic_usage.rs  custom_entities.rs  custom_orm_adapter.rs  postgres_usage.rs  shared_sqlx_pool.rs
examples/fullstack/backend/: Cargo.toml
examples/fullstack/backend/src/: auth_schema.rs  main.rs
examples/sea-orm-custom-entities/: Cargo.toml
examples/sea-orm-custom-entities/src/: auth_entities.rs  main.rs
examples/sea-orm-custom-entities/src/entities/: account.rs  invitation.rs  mod.rs  verification.rs
migrations/: 001_create_core_tables.sql  002_create_organization_tables.sql  003_create_two_factor_table.sql  004_create_api_key_table.sql  005_create_passkey_table.sql  006_api_key_reference_id.sql  007_passkey_add_aaguid.sql  README.md
scripts/: alignment-check.sh  generate-openapi-matrix.mjs  openapi_alignment_report.rs  sync_better_auth_openapi.rs
src/: config.rs  email.rs  error.rs  hooks.rs  lib.rs  middleware.rs  plugin.rs  plugins.rs  prelude.rs  schema.rs  seaorm.rs  store.rs  wire.rs
tests/: architecture_guard_tests.rs  axum_integration_tests.rs  client_compat_tests.rs  compat_admin_tests.rs  compat_consistency_tests.rs  compat_coverage_tests.rs  compat_endpoint_tests.rs  compat_field_tests.rs  compat_organization_tests.rs  compat_passkey_tests.rs  compat_unit_tests.rs  compatibility_tests.rs  database_hooks_tests.rs  derive_tests.rs  dual_server_tests.rs  email_normalization_tests.rs  integration_tests.rs  legacy_schema_integration_tests.rs  meta_trait_tests.rs  phase0_tests.rs  phase1_tests.rs  property_tests.rs  (+5 more)
(+147 files in other folders)
