[workspace]
resolver = "2"
members = [
    ".",
    "crates/better-auth-core",
    "crates/better-auth-api",
    "crates/better-auth-entity",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The most comprehensive authentication framework for Rust"
repository = "https://github.com/better-auth-rs/better-auth-rs"

[workspace.dependencies]
# Sub-crates
better-auth-core = { version = "0.1.0", path = "crates/better-auth-core" }
better-auth-api = { version = "0.1.0", path = "crates/better-auth-api" }
better-auth-entity = { version = "0.1.0", path = "crates/better-auth-entity" }

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# OpenAPI
utoipa = { version = "5", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "time",
    "url",
    "preserve_path_order",
] }

# Database
sea-orm = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-ipnetwork",
] }

# SQL
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Crypto provider
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration management
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
lazy_static = "1.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
backoff = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Data structures
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Crypto
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
jsonwebtoken = "9"

# Web frameworks
axum = "0.8"
tower = "0.5"
url = "2"

# Cache
redis = "0.27"

[package]
name = "better-auth"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:url"]
sqlx-postgres = ["dep:sqlx"]
redis-cache = ["dep:redis"]

[dependencies]
# Core crates
better-auth-core = { path = "crates/better-auth-core" }
better-auth-api = { path = "crates/better-auth-api" }

# Asynchronous runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

# Web framework (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Cache (optional)
redis = { workspace = true, optional = true }

[[example]]
name = "axum_server"
required-features = ["axum"]

[[example]]
name = "postgres_usage"
required-features = ["sqlx-postgres"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.ci]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
