[package]
name = "better-auth"
description = "The most comprehensive authentication framework for Rust"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/derive",
]
exclude = [
    "examples/sqlx-custom-entities",
    "examples/sea-orm-custom-entities",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/better-auth-rs/better-auth-rs"

[workspace.dependencies]
# Sub-crates
better-auth-core = { version = "0.3.0", path = "crates/core" }
better-auth-api = { version = "0.3.0", path = "crates/api" }
better-auth-derive = { version = "0.3.0", path = "crates/derive" }

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# SQL
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Data structures
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Crypto
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
jsonwebtoken = "9"

# Web frameworks
axum = "0.8"
tower = "0.5"
url = "2"

# Cache
redis = "0.27"

# Proc macro utilities
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:url"]
derive = ["better-auth-core/derive"]
sqlx-postgres = ["dep:sqlx", "better-auth-core/sqlx-postgres"]
redis-cache = ["dep:redis"]

[dependencies]
# Core crates
better-auth-core = { workspace = true }
better-auth-api = { workspace = true }

# Asynchronous runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

# Web framework (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Cache (optional)
redis = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "axum_server"
required-features = ["axum"]

[[example]]
name = "postgres_usage"
required-features = ["sqlx-postgres"]

[[example]]
name = "custom_entities"
required-features = ["derive"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.ci]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 16
