[package]
name = "better-auth-api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Plugin implementations for better-auth"
repository = { workspace = true }

[dependencies]
better-auth-core = { workspace = true }

# Asynchronous runtime
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
totp-rs = { workspace = true }
cookie = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# URL
url = { workspace = true }
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true }
