[package]
name = "better-auth-api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Plugin implementations for better-auth"

[dependencies]
better-auth-core = { workspace = true }

# Asynchronous runtime
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio = { workspace = true }
