[package]
name = "better-auth-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Core abstractions for better-auth: traits, types, config, error handling"

[dependencies]
# Asynchronous runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Crypto
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Cache (optional)
redis = { workspace = true, optional = true }

[features]
default = []
sqlx-postgres = ["dep:sqlx"]
redis-cache = ["dep:redis"]
