[package]
name = "better-auth-entity"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Entity definitions for better-auth"
repository = { workspace = true }

[features]
username = []

[dependencies]
sea-orm = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Data structures
uuid = { workspace = true }
ipnetwork = { version = "0.20", features = ["serde"] } # Version 0.21 is not compatible with sea-orm 1.1.16
# Time handling
chrono = { workspace = true }
# OpenAPI
utoipa = { workspace = true }
