[package]
name = "better-auth-migration"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Database migrations for better-auth"
repository = { workspace = true }

[dependencies]
sea-orm-migration = { workspace = true }
async-trait = { workspace = true }
