[package]
name = "better-auth-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Core abstractions for better-auth: traits, types, config, error handling"
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
# Asynchronous runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# Time handling
chrono = { workspace = true }

# Data structures
uuid = { workspace = true }

# Cookie parsing
cookie = { workspace = true }

# Pattern matching
glob-match = "0.2.1"
# Crypto
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

# Cache (optional)
redis = { workspace = true, optional = true }

better-auth-macros = { workspace = true }
axum = { workspace = true, optional = true }
url = { workspace = true }
tracing.workspace = true
sea-orm = { version = "2.0.0-rc.37", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros", "with-chrono", "with-json", "with-uuid"] }
sea-orm-migration = { version = "2.0.0-rc.37", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }

[features]
default = []
redis-cache = ["dep:redis"]
axum = ["dep:axum"]
