[package]
name = "better-auth-macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Proc macros used internally by the better-auth workspace"
repository = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
