[package]
name = "better-auth-seaorm-macros"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "SeaORM proc macros for better-auth"
repository = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
