[package]
name = "sea-orm-custom-entities"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
better-auth = { path = "../..", features = ["axum", "sqlx-postgres", "derive"] }
better-auth-core = { path = "../../crates/core", features = ["derive", "sqlx-postgres"] }
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
