[package]
name = "fullstack-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
better-auth = { path = "../../..", features = ["axum", "seaorm2"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
